--- a/MainWindow.xaml
+++ b/MainWindow.xaml
@@ -6,7 +6,14 @@
         xmlns:local="clr-namespace:Quizduell"
         mc:Ignorable="d"
         Title="MainWindow" Height="450" Width="800">
-    <Grid>
-        
+    <Grid Margin="20">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+            <RowDefinition Height="Auto"/>
+        </Grid.RowDefinitions>
+        <TextBlock Text="Gib deinen Namen ein:" FontSize="16" Grid.Row="0" Margin="0,0,0,10"/>
+        <TextBox Name="NameTextBox" Grid.Row="1" Height="30" FontSize="14" Margin="0,0,0,10"/>
+        <Button Content="Start" Grid.Row="2" Height="30" Width="100"/>
     </Grid>
 </Window>
